--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,5 +1,8 @@
 body {
   font-family: 'Noto Sans', sans-serif;
+  /* margin-left: auto;
+  margin-right: auto;
+  width: 1200px; */
 }
 
 
@@ -53,6 +56,9 @@ body {
 
 .publication-authors {
     font-family: 'Google Sans', sans-serif;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    /* font-size: 1.5em; */
 }
 
 .publication-venue {
@@ -71,15 +77,22 @@ body {
 }
 
 .publication-authors a {
-   color: hsl(204, 86%, 53%) !important;
+   /* color: hsl(204, 86%, 53%) !important; */
 }
 
 .publication-authors a:hover {
-    text-decoration: underline;
+    /* text-decoration: underline; */
 }
 
 .author-block {
   display: inline-block;
+  /* text-align: center; */
+  
+}
+
+.author-block p {
+  text-align: center;
+  line-height: 1.0;
 }
 
 .publication-banner img {
@@ -87,6 +100,12 @@ body {
 
 .publication-authors {
   /*color: #4286f4;*/
+}
+
+.publication-authors img {
+    width: 16%;
+    border-radius: 100%;
+    /* float: left; */
 }
 
 .publication-video {
@@ -140,6 +159,69 @@ body {
 .eql-cntrb { 
   font-size: smaller;
 }
+/* new stuff */
 
 
 
+/* .container {
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 16px;
+  padding-right: 16px;
+  width: 1000px;
+  text-align: center;
+} */
+
+.col-6 {
+  width: 16%;
+  float: left;
+}
+
+.col-5 {
+  width: 20%;
+  float: left;
+}
+
+.col-4 {
+  width: 25%;
+  float: left;
+}
+
+.col-3 {
+  width: 33%;
+  float: left;
+}
+
+.col-2 {
+  width: 50%;
+  float: left;
+}
+
+.author-row p {
+  text-align: center;
+  line-height: 1.0;
+}
+
+.author-row img {
+  width: 80%;
+  border-radius: 100%;
+  /* ensure image height and width are the same */
+}
+/* .author-row {
+  font-size: 0;
+} */
+
+.author-row,
+.affil-row {
+  overflow: auto;
+  margin-top: 5px;
+  padding: 5px;
+}
+
+
+
+.centered {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
