--- a/static/css/index.css
+++ b/static/css/index.css
@@ -134,7 +134,7 @@ body {
 }
 
 .results-carousel img {
-  width: 70%;
+  width: 80%;
   /* height: auto; */
   margin: auto;
   display:block;
@@ -163,14 +163,14 @@ body {
 
 
 
-.container {
+/* .container {
   margin-left: auto;
   margin-right: auto;
   padding-left: 16px;
   padding-right: 16px;
   width: 1000px;
   text-align: center;
-}
+} */
 
 .col-6 {
   width: 16%;
