--- a/static/css/index.css
+++ b/static/css/index.css
@@ -3,6 +3,9 @@ body {
   /* margin-left: auto;
   margin-right: auto;
   width: 1200px; */
+  margin-left: auto;
+  margin-right: auto;
+  width: 1500px;
 }
 
 
