--- a/static/css/index.css
+++ b/static/css/index.css
@@ -8,6 +8,16 @@ body {
   width: 1500px;
 }
 
+a p {
+  color: #3273dc;
+}
+
+a p:hover {
+  text-decoration: underline;
+}
+a:hover {
+  text-decoration: underline;
+}
 
 .footer .icon-link {
     font-size: 25px;
@@ -227,4 +237,14 @@ body {
   display: block;
   margin-left: auto;
   margin-right: auto;
+}
+
+figure {
+  margin: 0;
+  padding: 0;
+  text-align: center;
+}
+figure img {
+  width: 60%;
+  height: auto;
 }
