--- a/static/css/index.css
+++ b/static/css/index.css
@@ -5,7 +5,12 @@ body {
   width: 1200px; */
   margin-left: auto;
   margin-right: auto;
-  width: 1500px;
+  width: 1100px;
+}
+hr {
+    border: 0;
+    height: 1px;
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
 }
 
 a p {
@@ -148,7 +153,7 @@ a:hover {
 }
 
 .results-carousel img {
-  width: 80%;
+  width: 100%;
   /* height: auto; */
   margin: auto;
   display:block;
@@ -246,6 +251,6 @@ figure {
   text-align: center;
 }
 figure img {
-  width: 70%;
+  width: 90%;
   height: auto;
 }
