--- a/static/css/index.css
+++ b/static/css/index.css
@@ -5,7 +5,7 @@ body {
   width: 1200px; */
   margin-left: auto;
   margin-right: auto;
-  max-width: 1100px;
+  /* width: 1100px;s */
 }
 hr {
     border: 0;
