--- a/static/css/index.css
+++ b/static/css/index.css
@@ -8,9 +8,10 @@ body {
   /* width: 1100px;s */
 }
 hr {
-    border: 0;
+    display: none;
+    /* border: 0;
     height: 1px;
-    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0)); */
 }
 
 a p {
